--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+#subjectInput,
+#subjectInput:focus,
+#subjectInput:active {
+  outline: none;
+  box-shadow: none;
+  border-color: transparent; /* Optional */
+}
