--- a/styles/global.css
+++ b/styles/global.css
@@ -1,13 +1,12 @@
-/* src/styles/globals.css */
+/* src/styles/globals.css
 
-/* Reset de base pour les styles */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
   
-  /* Fontes et couleurs globales */
+
   body {
     font-family: 'Helvetica', Arial, sans-serif;
     background-color: #f9f9f9;
@@ -43,4 +42,40 @@
     margin: 0 auto;
     padding: 0 1rem;
   }
-  
+   */
+
+
+   @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.clip-polygon {
+  clip-path: polygon(20% 0%, 100% 0%, 100% 80%, 80% 100%, 0% 100%, 0% 20%);
+}
+
+.fade-in {
+  animation: fadeIn 1s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.hover-scale {
+  transition: transform 0.4s ease;
+}
+
+.hover-scale:hover {
+  transform: scale(1.05);
+}
+
+.dropdown-animation {
+  animation: fadeIn 0.3s ease;
+}
