complete: all the popups added on Classes page

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,3 +88,10 @@
   box-shadow: none;
   border-color: transparent; /* Optional */
 }
+
+#studentClassesTable {
+  th,
+  td {
+    text-align: center;
+  }
+}
