--- a/app/globals.css
+++ b/app/globals.css
@@ -95,3 +95,21 @@
     text-align: center;
   }
 }
+
+table th,
+td {
+  border: solid 1px #ddd;
+}
+
+table thead th {
+  font-weight: bolder;
+  background-color: #f8f9fa;
+}
+
+table tbody tr:nth-of-type(odd) {
+  background-color: #deecf1;
+}
+
+table tbody tr td {
+  color: gray;
+}
